# skintel

./: Cargo.toml  config.toml
src/: api.rs  cache.rs  core.rs  data.rs  main.rs  models.rs
src/api/: market.rs  metadata.rs
src/core/: tradeup.rs  tradeup_discovery.rs
src/data/: bymekel.rs  market.rs
src/data/market/: csfloat.rs
src/domain/: models.rs
