[package]
name = "skintel"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"]}
serde_json = "1"
reqwest = { version = "0.13.4", features = ["json", "gzip"] }
tokio = { version = "1.52", features = ["full"]}
dotenvy = "0.15.7"
urlencoding = "2"
tabled = "0.15"
toml = "0.8"
rand = "0.8"
